First working version of driver
Switch from dummy values to actual sensor readings using WS_UMB.py.
Add temperature readings.

--- a/lufft_wsx_interfaces/CMakeLists.txt
+++ b/lufft_wsx_interfaces/CMakeLists.txt
@@ -13,6 +13,7 @@ find_package(std_msgs REQUIRED)
 rosidl_generate_interfaces(${PROJECT_NAME}
   "msg/LufftWSXXX.msg"
   "msg/Precipitation.msg"
+  "msg/Temperature.msg"
   DEPENDENCIES std_msgs
 )
 
