Add additional msgs

--- a/lufft_wsx_interfaces/CMakeLists.txt
+++ b/lufft_wsx_interfaces/CMakeLists.txt
@@ -14,6 +14,12 @@ rosidl_generate_interfaces(${PROJECT_NAME}
   "msg/LufftWSXXX.msg"
   "msg/Precipitation.msg"
   "msg/Temperature.msg"
+  "msg/Humidity.msg"
+  "msg/Entalpy.msg"
+  "msg/AirPressure.msg"
+  "msg/AirDensity.msg"
+  "msg/Wind.msg"
+
   DEPENDENCIES std_msgs
 )
 
