--- a/lufft_wsx_launch/param/lufft_wsx.yaml
+++ b/lufft_wsx_launch/param/lufft_wsx.yaml
@@ -2,7 +2,7 @@ lufft_ws100:
    ros__parameters:
       publish_frequency: 1.0
       umb_channels: [620, 625, 820, 825]
-      device: "/dev/rs485_adapter_2"
+      device: "/dev/rs485_adapter_0"
       baudrate: 19200
       device_id: 1
 
@@ -10,8 +10,23 @@ lufft_ws100:
 lufft_ws600:
    ros__parameters:
       publish_frequency: 1.0
-      umb_channels: [100, 120, 140, 160]
-      device: "/dev/rs485_adapter_2"
+      umb_channels: [
+         100, 120, 140, 160,
+         112, 113,
+         200, 220, 240, 260,
+         215,
+         300, 320, 340, 360,
+         305, 325, 345, 365,
+         310,
+         400, 420, 440, 460, 480,
+         401,
+         403,
+         500, 520, 540, 580, 
+         501,
+         805,
+         806
+      ]
+      device: "/dev/rs485_adapter_1"
       baudrate: 19200
       device_id: 6
       
