Fix cmake dependencies

--- a/lufft_wsx_interfaces/CMakeLists.txt
+++ b/lufft_wsx_interfaces/CMakeLists.txt
@@ -19,6 +19,7 @@ rosidl_generate_interfaces(${PROJECT_NAME}
   "msg/AirPressure.msg"
   "msg/AirDensity.msg"
   "msg/Wind.msg"
+  "msg/Radiation.msg"
 
   DEPENDENCIES std_msgs
 )
