--- a/lufft_wsx_launch/param/lufft_wsx.yaml
+++ b/lufft_wsx_launch/param/lufft_wsx.yaml
@@ -1,4 +1,4 @@
-lufft_ws100:
+lufft_ws:
    ros__parameters:
       query_interval: 1.0                 # Defines the interval between two queries to the sensor in seconds. Messages will be published at the same interval.
       umb_channels: [                     # List of the UMB channels to querry. See: https://www.lufft.com/download/manual-lufft-wsxxx-weather-sensor-en/
@@ -6,29 +6,4 @@ lufft_ws100:
       ]
       device: "/dev/rs485_adapter_0"      # The port where the sensor is connected
       baudrate: 19200                     # Baudrate of that port
-      device_id: 1                        # The device ID of the sensor as configured in the Lufft software.
-
-
-lufft_ws600:
-   ros__parameters:
-      query_interval: 1.0               # Defines the interval between two queries to the sensor in seconds. Messages will be published at the same interval.
-      umb_channels: [                     # List of the UMB channels to querry. See: https://www.lufft.com/download/manual-lufft-wsxxx-weather-sensor-en/
-         100, 120, 140, 160,
-         112, 113,
-         200, 220, 240, 260,
-         215,
-         300, 320, 340, 360,
-         305, 325, 345, 365,
-         310,
-         400, 420, 440, 460, 480,
-         401,
-         403,
-         500, 520, 540, 580, 
-         501,
-         805,
-         806
-      ]
-      device: "/dev/rs485_adapter_1"     # The port where the sensor is connected
-      baudrate: 19200                     # Baudrate of that port
-      device_id: 6                        # The device ID of the sensor as configured in the Lufft software.
-      
+      device_id: 1                        # The device ID of the sensor. Can be configured in the Lufft ConfigTool.NET.
